# horta-frontend

./: .gitignore  dev_build.sh
.github/workflows/: main.yml
code/: Cargo.toml  index.html
code/src/: lib.rs
code/static/: style.css
docker/: Dockerfile.prod  Dockerfile.serve
