[package]
name = "sentiment-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3"
web-sys = { version = "0.3.22", features = ["BinaryType","Blob","CssStyleDeclaration","Document", "Element", "ErrorEvent","FileReader","Headers","HtmlElement","MessageEvent","ProgressEvent","Request","RequestInit","RequestMode","Response","WebSocket","Window"]}
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
lazy_static = "1.4.0"
